tests/errors/interface_undeclared.v
interface foo<t> {
}

implementation foo<int> {
  extern bar () -> void
}
